# Infinitesimal-Rigidity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RigidityResearch.VC.VC.opendb  RigidityResearch.sln
GUI/: GUI.filters  GUI.vcxproj  GUI.vcxproj.filters
GUI/include/: Common.h  ViewerData.h
GUI/x64/Debug/GUIPolycube.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
GUI/x64/Debug/GUIPolytube.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GUIPolytube.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GUI/x64/Release/GUIPolycube.tlog/: GUIPolycube.lastbuildstate
InfinitesimalDeformation/: InfinitesimalDeformation.vcxproj  InfinitesimalDeformation.vcxproj.filters
InfinitesimalDeformation/include/: AlgorithmCommon.h  ControllerRigidity.h  HEMatrixConstructor.h  LinearSystemConstructor.h  Preprocessor.h
Main/: Main.vcxproj  Main.vcxproj.filters  main.cpp
Main/x64/Debug/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Main.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Main/x64/Release/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Main.lastbuildstate  Main.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MeshStructure/: MeshStructure.vcxproj  MeshStructure.vcxproj.filters
MeshStructure/include/MeshSurface/: MeshSurface.h  OpenMeshHeader.h
MeshStructure/include/MeshVolume/: MeshVolume.h
Test/: Test.vcxproj  main.cpp
Test/x64/Debug/: vc140.idb
Test/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Utilities/: Utilities.vcxproj  Utilities.vcxproj.filters
Utilities/include/: MergeMeshMatrix.h  SurfaceMatrixConverter.h  Tetrahedralize.h  Triangulate3DPolygon.h  VolumeMatrixConverter.h
Utilities/x64/Debug/Utilities.tlog/: Utilities.lastbuildstate
cmake/: FindOpenVolumeMesh.cmake
src/: main.cpp
src/InfinitesimalDeformation/: AlgorithmCommon.h  KernalSolver.h  MotionSolver.h
src/MeshStructure/MeshVolume/: OpenVolumeHeader.h
src/Utilities/: MergeMeshMatrix.h  SurfaceMatrixConverter.h  Triangulate3DPolygon.h  VolumeMatrixConverter.h
src/Viewer/: Common.h  Controller.h  KeyBoard.h  Menu.h  ViewerData.h  ViewerFlags.h
